# tinoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  go.mod  main.go  syntax.md  tinoc
samples/: 00_intro.tnc  01_vars.tnc
src/: CMakeLists.txt  cmd.go  lexer.go  main.c  main.cpp
tests/: CMakeLists.txt  test_main.cpp
utils/: test.c  tinoc.h
